# Book-Store

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml  dockerfile  env.dev  makefile  pyproject.toml  views.py
.github/workflows/: build.yml  workflow-pr.yaml
contrib/: envGen.py
order/migrations/: 0001_initial.py
order/models/: __init__.py  order.py
order/serializers/: order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: factories.py
product/migrations/: 0001_initial.py
product/models/: __init__.py  category.py  product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/test_serializers/: test_category_serializer.py  test_product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
setup/: settings.py  urls.py  views.py
