[tool.poetry]
name = "book-store-api"
version = "0.1.0"
description = ""
authors = ["Pablo Troli <brawlixo123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
djangorestframework = "^3.15.2"
django = "^5.1.1"
python-decouple = "^3.8"
django-extensions = "^3.2.3"
django-debug-toolbar = "^4.4.6"
whitenoise = "^6.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
factory-boy = "^3.3.1"
black = "^24.8.0"
faker = "^30.0.0"
pytest-django = "^4.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
